test/integration/invalid-href/pages/dynamic-route-mismatch.js
import Link from 'next/link'

export default () => (
  <Link href='/[post]' as='/blog/post-1'>
    <a>Click me</a>
  </Link>
)
